# lode

./: LICENSE  README.md  env.example  pyproject.toml
cli/: Cargo.toml
cli/runs/56cfafcf-1ef1-4020-bfc6-ba3de8ae9e59/: metadata.json  request.json
cli/runs/56cfafcf-1ef1-4020-bfc6-ba3de8ae9e59/prompts/: 001-clarifier.txt  002-orchestrator.txt
cli/runs/56cfafcf-1ef1-4020-bfc6-ba3de8ae9e59/raw_responses/: 001-clarifier.json  002-orchestrator.json
cli/runs/f0c07828-36b3-4427-a125-49257af6cd19/: metadata.json  request.json
cli/runs/f0c07828-36b3-4427-a125-49257af6cd19/prompts/: 001-clarifier.txt  002-orchestrator.txt
cli/runs/f0c07828-36b3-4427-a125-49257af6cd19/raw_responses/: 001-clarifier.json  002-orchestrator.json
cli/src/: cli.rs  main.rs  output.rs  protocol.rs  run.rs  tui.rs
cli/src/tui/: markdown.rs  widgets.rs
contracts/v1/: interrupt.schema.json  request.schema.json  response.schema.json
lode/: __init__.py  config.py  manager.py  openai_client.py  runner.py
lode/agents/: __init__.py  clarifier.py  evaluator.py  orchestrator.py  planner.py  search.py  writer.py
