[package]
name = "lode-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for the Lode multi-agent research system"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }

