[package]
name = "lode-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for the Lode multi-agent research system"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dotenvy = "0.15"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tui-markdown = "0.3"
tui-textarea = "0.7"
uuid = { version = "1.11", features = ["v4"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

